--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build --noEmit",
     "lint": "eslint",
-    "lint:fix": "eslint --fix"
+    "lint:fix": "eslint --fix",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
@@ -39,6 +40,7 @@
     "@vue/tsconfig": "^0.7.0",
     "eslint": "^9.24.0",
     "eslint-plugin-vue": "^10.0.0",
+    "husky": "^8.0.0",
     "typescript": "~5.7.2",
     "vite": "^6.2.0",
     "vite-plugin-vue-devtools": "^7.7.2",
