--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lucide-vue-next": "^0.488.0",
     "pinia": "^3.0.2",
     "postcss": "^8.5.3",
+    "reka-ui": "^2.2.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.3",
     "tw-animate-css": "^1.2.5",
