--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
     "@tailwindcss/vite": "^4.1.3",
+    "@tanstack/vue-query": "^5.87.1",
     "@vueuse/core": "^13.1.0",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
